# uas-31390

./: .gitignore  Quadcopter_setup_parameters.m  README.md  SMC_Altitude_PID_Position.slx  SMC_Altitude_PID_Position.slx.r2020b  demo_positions.mat  recording.mat  startup.m  uas_crazyflie.slx  uas_demo.slx  uas_evaluation.slx  uas_get_hoops.m  uas_hoop.sh  uas_hoops.slx  uas_joystick.slx  uas_main.slx  uas_main_R2020b.slx  uas_main_sfun.mexmaci64  uas_minimum_snap.m  uas_parameters.m  uas_parameters.mat  uas_ros_parameters.mat  uas_simulation.slx  uas_thrust.mat  uas_thrust_constants.mat  uas_thrust_identification.m  uas_thrust_identification.mat  uas_trajectory.m  uas_trajectory.slx
follow_path/: Astar_2D_main.m  astar_2d.m  follow_path.slx  maze_1.m  plot_map.m
follow_path_3D/: Astar_3D_main.m  astar_3d.m  follow_path_3D.slx  follow_path_script.m  gen_square3d.m  plot_map.m  plot_route.m  plot_start_stop.m  untitled.m
matlab_msg_gen_ros1/glnxa64/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
matlab_msg_gen_ros1/glnxa64/devel/include/mavros_msgs/: Altitude.h  CamIMUStamp.h  CommandBoolRequest.h  CommandCode.h  CommandHomeRequest.h  CommandIntRequest.h  CommandLongResponse.h  CommandTOLRequest.h  CommandVtolTransitionResponse.h  CompanionProcessStatus.h  DebugValue.h  ESCInfo.h  ESCInfoItem.h  ESCStatus.h  ExtendedState.h  FileChecksumRequest.h  FileEntry.h  FileListRequest.h  FileListResponse.h  FileReadRequest.h  FileRemoveDirRequest.h  FileRemoveRequest.h  FileRenameResponse.h  FileTruncateRequest.h  FileWriteResponse.h  GPSRTK.h  GlobalPositionTarget.h  HilActuatorControls.h  HilGPS.h  HilSensor.h  HomePosition.h  LogData.h  LogEntry.h  LogRequestListResponse.h  ManualControl.h  Mavlink.h  MessageIntervalRequest.h  MountConfigureResponse.h  MountControl.h  OpticalFlowRad.h  (+22 more)
matlab_msg_gen_ros1/glnxa64/install/: .rosinstall  local_setup.sh  setup.sh
matlab_msg_gen_ros1/glnxa64/install/include/mavros_msgs/: ADSBVehicle.h  ActuatorControl.h  AttitudeTarget.h  BatteryStatus.h  CommandBoolResponse.h  CommandHomeResponse.h  CommandIntResponse.h  CommandLongRequest.h  CommandTOLResponse.h  CommandTriggerControlRequest.h  CommandTriggerControlResponse.h  CommandTriggerIntervalRequest.h  CommandTriggerIntervalResponse.h  CommandVtolTransitionRequest.h  ESCStatusItem.h  EstimatorStatus.h  FileChecksumResponse.h  FileCloseRequest.h  (+48 more)
matlab_msg_gen_ros1/glnxa64/src/mavros_msgs/: CMakeLists.txt  Md5checksum.mat  packageInfo.mat
matlab_msg_gen_ros1/glnxa64/src/mavros_msgs/include/mavros_msgs/: visibility_control.h
matlab_msg_gen_ros1/glnxa64/src/mavros_msgs/m/+ros/+internal/+ros/+custommessages/+mavros_msgs/: aDSBVehicle.m  altitude.m  batteryStatus.m  camIMUStamp.m  commandHomeRequest.m  commandHomeResponse.m  commandIntRequest.m  commandLongRequest.m  commandLongResponse.m  commandTriggerIntervalResponse.m  debugValue.m  eSCInfo.m  eSCInfoItem.m  eSCStatus.m  eSCStatusItem.m  fileCloseRequest.m  fileEntry.m  fileListRequest.m  fileOpenResponse.m  fileReadRequest.m  fileReadResponse.m  fileRemoveDirResponse.m  fileTruncateResponse.m  fileWriteResponse.m  gPSRAW.m  gPSRTK.m  hilControls.m  hilGPS.m  landingTarget.m  logData.m  logEntry.m  logRequestDataRequest.m  logRequestDataResponse.m  logRequestEndRequest.m  logRequestEndResponse.m  manualControl.m  mavlink.m  param.m  paramGetRequest.m  paramGetResponse.m  (+17 more)
matlab_msg_gen_ros1/glnxa64/src/mavros_msgs/m/+ros/+msggen/+mavros_msgs/: BatteryStatus.m  CamIMUStamp.m  CommandCode.m  CommandIntRequest.m  CommandIntResponse.m  CommandLongRequest.m  CommandTriggerControlRequest.m  CommandTriggerControlResponse.m  CommandTriggerIntervalRequest.m  CommandVtolTransitionRequest.m  CommandVtolTransitionResponse.m  DebugValue.m  ESCInfo.m  EstimatorStatus.m  ExtendedState.m  FileCloseResponse.m  FileEntry.m  FileListResponse.m  FileMakeDirRequest.m  FileMakeDirResponse.m  FileOpenRequest.m  FileRemoveDirRequest.m  FileRemoveDirResponse.m  FileRemoveRequest.m  FileRemoveResponse.m  FileRenameRequest.m  FileRenameResponse.m  FileTruncateRequest.m  FileTruncateResponse.m  FileWriteResponse.m  GPSRAW.m  GPSRTK.m  GlobalPositionTarget.m  HilActuatorControls.m  HilStateQuaternion.m  LandingTarget.m  LogData.m  LogEntry.m  LogRequestDataResponse.m  LogRequestEndResponse.m  (+29 more)
matlab_msg_gen_ros1/glnxa64/src/mavros_msgs/src/: mavros_msgs_ADSBVehicle_message.cpp  mavros_msgs_Altitude_message.cpp  mavros_msgs_BatteryStatus_message.cpp  mavros_msgs_CamIMUStamp_message.cpp  mavros_msgs_CommandCode_message.cpp  mavros_msgs_CommandHome_service.cpp  mavros_msgs_CommandInt_service.cpp  mavros_msgs_CommandLong_service.cpp  mavros_msgs_CommandTriggerControl_service.cpp  mavros_msgs_CommandTriggerInterval_service.cpp  mavros_msgs_CommandVtolTransition_service.cpp  mavros_msgs_CompanionProcessStatus_message.cpp  mavros_msgs_DebugValue_message.cpp  mavros_msgs_ESCInfoItem_message.cpp  mavros_msgs_ESCInfo_message.cpp  mavros_msgs_ESCStatusItem_message.cpp  mavros_msgs_ESCStatus_message.cpp  mavros_msgs_EstimatorStatus_message.cpp  mavros_msgs_ExtendedState_message.cpp  mavros_msgs_FileChecksum_service.cpp  mavros_msgs_FileClose_service.cpp  mavros_msgs_FileEntry_message.cpp  mavros_msgs_FileList_service.cpp  mavros_msgs_FileMakeDir_service.cpp  mavros_msgs_FileOpen_service.cpp  mavros_msgs_FileRead_service.cpp  mavros_msgs_FileRemoveDir_service.cpp  mavros_msgs_FileRemove_service.cpp  mavros_msgs_FileRename_service.cpp  mavros_msgs_FileTruncate_service.cpp  mavros_msgs_FileWrite_service.cpp  mavros_msgs_GPSRAW_message.cpp  mavros_msgs_GPSRTK_message.cpp  mavros_msgs_GlobalPositionTarget_message.cpp  mavros_msgs_HilActuatorControls_message.cpp  mavros_msgs_HilControls_message.cpp  mavros_msgs_HilGPS_message.cpp  mavros_msgs_HilSensor_message.cpp  mavros_msgs_HilStateQuaternion_message.cpp  mavros_msgs_HomePosition_message.cpp  (+45 more)
mavros_msgs/cmake/: mavros_msgsConfig.cmake
maze/: auto_wall.txt  maze_1.m  maze_1_3D.m  plot_map.m
maze/exercise_4_files/: auto_wall.txt  generate_wall.m  greedy_3d.m  map_3d.m  naked_final_wall.txt  wall.txt
(+115 files in other folders)
